--- a/test/testConfigFile/A/test.html
+++ b/test/testConfigFile/A/test.html
@@ -1,6 +1,5 @@
-
 <!--<!DOCTYPE html>-->
-<ul>  
+<ul>
 	<li>
-		<a href="http://www.github.com">github</a>
+    <a href="https://www.github.com">github</a>
 	</ul>
