Add ESLint and update configs and dev deps
- minor dev dep update
- typo fix
- add recommended extension for developers
- add eslint and prettier scripts
- Update Super Linter GH Action

--- a/test/testConfigFile/A/B/test.html
+++ b/test/testConfigFile/A/B/test.html
@@ -1,6 +1,7 @@
-
 <!--<!DOCTYPE html>-->
-<ul>  
+<html>
+<ul>
 	<li>
-		<a href='http://www.github.com'>github</a>
+    <a href='https://www.github.com'>github</a>
 	</ul>
+</html>
