Fix extension build issue

--- a/test/testConfigFile/test.html
+++ b/test/testConfigFile/test.html
@@ -1,5 +1,10 @@
-<!--<!DOCTYPE html>-->
-<ul>
-	<li>
-    <a href='https://www.github.com'>github</a>
-	</ul>
+<!doctype html>
+<html>
+  <body>
+    <ul>
+      <li>
+        <a href="https://www.github.com">github</a>
+      </li>
+    </ul>
+  </body>
+</html>
