--- a/test/testConfigFile/test.html
+++ b/test/testConfigFile/test.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Test Config File</title>
+  </head>
   <body>
     <ul>
       <li>
