feat: Add tag-self-close tag

--- a/test/autofix/test-autofixes.html
+++ b/test/autofix/test-autofixes.html
@@ -30,6 +30,14 @@
         <span style="color: red">Test</span>
       </div>
 
+      <!-- These tags should be self-closing -->
+      <img src="test.jpg" alt="Test image">
+      <br>
+      <hr>
+      <input type="text" placeholder="Enter text">
+      <meta name="test" content="test">
+      <link rel="stylesheet" href="style.css">
+
       <!-- Mix of issues -->
       <p class =" paragraph" id = "para1">
         This is a test paragraph with <a href="link.html">a link</a>.
