Add autofix for attr-value-no-duplication rule
Implemented auto-fix logic for the attr-value-no-duplication rule in the server, which removes duplicate values within attribute values.

Updated documentation and changelog, and added new test cases for both attr-no-duplication and attr-value-no-duplication rules.

--- a/test/autofix/meta-description-test.html
+++ b/test/autofix/meta-description-test.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <!-- Test case 1: Basic head with charset - description should be added after charset -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meta Description Test</title>
 </head>
 <body>
